--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,8 @@
 <html>
 <head>
      <meta charset="UTF-8">
-     <title>夏時紀錄</title>
+     {{ $gggg := .Title }};
+     <title>夏時紀錄 -{{ $gggg }}</title>
 </head>
     <body>
         <div style="width: 80%; max-width: 750px; margin: 4rem auto;">
