--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <html lang="{{ $.Site.LanguageCode}}">
   <head>
     {{ partial "header.html" . }}
-    <title>{{ $.Site.Title }}</title>
+    <title>夏時紀錄-Tony x Frank的說書小站</title>
   </head>
   <body>
       {{ partial "navbar.html" . }}
