--- a/layouts/partials/AllAAA.html
+++ b/layouts/partials/AllAAA.html
@@ -1,6 +1,6 @@
 <body >
 <main class="container mx-auto mt-8 px-4 xl:px-0">
-     <section id="Allarticles" class="mt-12">
+     <section id="Allarticles" class="mt-12" style="margin: 20px">
         <div class="md:flex justify-center">
               {{ partial "home_title" (dict "title" "所有文章") }}
         </div>
