--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -59,7 +59,7 @@
 
 
 <!--這邊是活動這邊是活動-->
-    <section id="projects" class="mt-12">
+    <section id="projects" class="mt-12" style="margin: 20px">
       <div class="md:flex justify-center">
         {{ partial "home_title" (dict "title" "活動計畫") }}
       </div><br>
@@ -94,7 +94,7 @@
 
 
 <!--這邊是文章分類這邊是文章文章文章文章文章文章-->
-    <section id="aarticles" class="mt-12">
+    <section id="aarticles" class="mt-12" style="margin: 20px">
       <div class="md:flex justify-center">
         {{ partial "home_title" (dict "title" "文章分類") }}
       </div><br>
