--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      {{ $ggg := .Title }};
-     <title>夏時紀錄- {{ $ggg }}</title>
+     <title>夏時紀錄-{{ $ggg }}</title>
 </head>
     <body>
       <div style="margin:10px" class="md:flex justify-center">
@@ -12,6 +12,7 @@
       </div>
       <div
           class="mt-8 grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
+          style="margin: 20px"
       >
       {{ range .Pages }}
           <div class="w-full rounded overflow-hidden shadow-lg">
