--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -15,13 +15,15 @@
           style="margin: 20px"
       >
       {{ range .Pages }}
-          <div class="w-full rounded overflow-hidden shadow-lg">
+          <div class="hover:bg-gray-300 hover:shadow-2xl transition duration-200 w-full rounded overflow-hidden shadow-lg">
                 <a href="{{.Permalink}}">
                   {{if .Params.image}}
+                  <div class="transform hover:scale-110 transition duration-200">
                   <img
                     class="w-full h-48"
                       src="{{.Params.image}}"
                   />
+                 </div>
                   {{else}}
                   <img
                       class="w-full h-48"
