--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,6 +14,16 @@
             <hr><br>
             <div>{{.Content}}</div>
         </div>
+<!-- hitwebcounter Code START -->
+             {{if eq .Title `網頁日誌` }}
+             <div style="width: 80%; max-width: 750px; margin: 4rem auto;">
+              <h1>目前累計訪客總數:</h1>
+
+               <a href="https://www.hitwebcounter.com" target="_blank">
+                 <img src="https://hitwebcounter.com/counter/counter.php?page=7817161&style=0008&nbdigits=3&type=ip&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>
+             </div>
+             {{end}}
+<!-- hitwebcounter Code END -->
         <div style="width: 80%; max-width: 750px; margin: 4rem auto;">
             {{ partial "disqus.html" . }}
         </div>
