--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -69,7 +69,8 @@
         class="mt-8 grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 "
       >
         {{ range $data.project.list }}
-        <div class="w-full rounded overflow-hidden shadow-lg">
+        <div class="hover:bg-gray-300 hover:shadow-2xl transition duration-200 w-full rounded overflow-hidden shadow-lg">
+          <div class="transform hover:scale-110 transition duration-200">
           <a href="{{ .myConnect }}">
             <img
             class="w-full h-48"
@@ -77,8 +78,9 @@
             alt="Sunset in the mountains"
             />
           </a>
+          </div>
           <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2"><a href="{{ .myConnect }}">{{ .title }}</a></div>
+            <div class="hover:text-gray-600 transition duration-500 font-bold text-xl mb-2"><a href="{{ .myConnect }}">{{ .title }}</a></div>
             <p class="text-gray-700 text-base">
               {{ .text }}
             </p>
@@ -104,16 +106,20 @@
         class="mt-8 grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
       >
         {{ range $data.aarticles.list }}
-        <div class="w-full rounded overflow-hidden shadow-lg">
-          <a href="{{ .myConnect }}">
+        <div class="hover:bg-gray-300 hover:shadow-2xl transition duration-200 w-full rounded overflow-hidden shadow-lg">
+
+          <div class="transform hover:scale-110 transition duration-200">
+            <a href="{{ .myConnect }}">
             <img
             class="w-full h-48"
             src="{{ .image }}"
             alt="Sunset in the mountains"
             />
-          </a>
+            </a>
+            </div>
+
           <div class="px-6 py-4">
-            <div class="font-bold text-xl mb-2"><a href="{{ .myConnect }}">{{ .title }}</a></div>
+            <div class="hover:text-gray-600 transition duration-500 font-bold text-xl mb-2"><a href="{{ .myConnect }}">{{ .title }}</a></div>
             <p class="text-gray-700 text-base">
               {{ .text }}
             </p>
