--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,10 +1,12 @@
 <nav class="pl-4 md:pl-24">
   <a href="{{ .Site.BaseURL }}" class="logo" style=" font-size: 5.25vmin">{{ .Site.Title }}</a>
   <ul class="hidden md:flex">
+    {{ if eq .Title `Mekaku's Site` }}
     {{ range .Site.Menus.main }}
     <li>
       <a href="{{ .URL }}">{{ .Name }}</a>
     </li>
+    {{end}}
     {{end}}
   </ul>
 </nav>
