--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,8 @@
       {{ partial "hometest.html" . }}
       {{ partial "home.html" . }}
       {{ partial "AllAAA.html" . }}
-<!--  {{ partial "BelowTest.html" . }}
+  <!--    {{ partial "BelowTest.html" . }}
+      {{ partial "RecentPost.html" . }}
       {{ partial "TEST.html" . }} -->
       {{ partial "footer.html" . }}
   </body>
