--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,9 +8,9 @@
       {{ partial "navbar.html" . }}
       {{ partial "hometest.html" . }}
       {{ partial "home.html" . }}
-      {{ partial "AllAAA.html" . }}
-  <!--    {{ partial "BelowTest.html" . }}
       {{ partial "RecentPost.html" . }}
+  <!--{{ partial "AllAAA.html" . }}
+      {{ partial "BelowTest.html" . }}
       {{ partial "TEST.html" . }} -->
       {{ partial "footer.html" . }}
   </body>
