--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -98,7 +98,7 @@
 <!--這邊是文章分類這邊是文章文章文章文章文章文章-->
     <section id="aarticles" class="mt-12" style="margin: 20px">
       <div class="md:flex justify-center">
-        {{ partial "home_title" (dict "title" "文章分類") }}
+        {{ partial "home_title" (dict "title" "所有文章") }}
       </div><br>
 
       {{if $data.aarticles.list}}
