--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="text-center mt-8 py-2 bg-gray-900 text-white">
-  <div>&copy; {{ now.Format "2006" }} {{ $.Site.Params.Name }}  Version {{ $.Site.Params.Version }}</div>
+  <div>{{ $.Site.Params.Name }} &copy; {{ now.Format "2006" }}   Version {{ $.Site.Params.Version }}</div>
 </footer>
