--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,7 @@
       {{ partial "RecentPost.html" . }}
   <!--{{ partial "AllAAA.html" . }}
       {{ partial "BelowTest.html" . }}
+      {{ partial "About.html" . }}
       {{ partial "TEST.html" . }} -->
       {{ partial "footer.html" . }}
   </body>
