--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -5,58 +5,9 @@
   <div id="about" class="md:flex justify-center">
       {{ partial "home_title" (dict "title" "關於我們") }}
   </div>
-  <br><br><br>
-  <section class="md:flex justify-around" >
-<!--以下是陳宥任-->
-          <div class="my-auto md:mr-4">
-              <div style="display: block; width: 100px; height: 100px; overflow: hidden; border-radius: 100px; text-align: center" >
-            <a href="https://www.facebook.com/profile.php?id=100007417927404">
-            {{ range $data.aboutTony.Picture }}
-            <img alt="Tony Chen" src="{{.url}}" width="128" height="128"></a>{{end}}
-              </div>
-              <div class="mt-3 gap-3 text-xl">
-          {{ range $data.aboutTony.link }}
-          <a href="{{.url}}"><i class="{{ .icon }}"></i></a>{{end}}
-              </div>
-
-          </div>
-          <div class="mt-4 md:mt-0 md:ml-4" >
-        <div class="text-2xl font-bold">
-          {{ if $data.aboutTony.title }}{{$data.aboutTony.title}}{{else}}It goes wrong{{end}}
-        </div>
-        <div class="text-lg mt-3">
-          <div>
-            {{ if $data.aboutTony.text}}{{ replace $data.aboutTony.text "\n" "<br />" | safeHTML }}
-            {{else}}It goes wrong{{end}}
-          </div>
-        </div>
-          </div>
-<!--以下是修方良-->
-      <div class="my-auto md:mr-4">
-        <div style="display: block; width: 100px; height: 100px; overflow: hidden; border-radius: 100px; text-align: center" >
-            <a href="https://www.facebook.com/profile.php?id=100006686837189">
-            {{ range $data.aboutFrank.Picture }}
-            <img alt="Frank Hsui" src="{{ .url }}" width="128" height="128"></a>{{end}}
-        </div>
-        <div class="mt-3 gap-3 text-xl">
-          {{ range $data.aboutFrank.link }}
-          <a href="{{.url}}"><i class="{{ .icon }}"></i></a>{{end}}
-        </div>
-
-      </div>
-      <div class="mt-4 md:mt-0 md:ml-4">
-        <div class="text-2xl font-bold">
-          {{ if $data.aboutFrank.title }}{{$data.aboutFrank.title}}{{else}}It goes wrong{{end}}
-        </div>
-        <div class="text-lg mt-3">
-          <div>
-            {{ if $data.aboutFrank.text}}{{ replace $data.aboutFrank.text "\n" "<br />" | safeHTML }}
-            {{else}}It goes wrong{{end}}
-          </div>
-        </div>
-      </div>
-  </section>
-
+  <br>
+      {{ partial "About.html" . }}
+  <br>
 
 <!--這邊是活動這邊是活動-->
     <section id="projects" class="mt-12" style="margin: 20px">
@@ -94,7 +45,7 @@
     </section>
 
 
-
+<br>
 <!--這邊是文章分類這邊是文章文章文章文章文章文章-->
     <section id="aarticles" class="mt-12" style="margin: 20px">
       <div class="md:flex justify-center">
@@ -131,9 +82,6 @@
           <div class="mt-4 text-xl text-center">Projects does not exist</div>
       {{end}}
     </section>
-
-
-
-
   </main>
 </div>
+<br>
