--- a/layouts/partials/About.html
+++ b/layouts/partials/About.html
@@ -1,7 +1,8 @@
 {{ $data := .Site.Data.home }}
 <section class="md:flex justify-around" >
 <!--以下是陳宥任-->
-<figure class="bg-gray-100 rounded-xl p-8">
+<figure class="bg-white rounded-xl p-8">
+  <!--插入圖片連結-->
   <img class="w-32 h-32 rounded-full mx-auto" src="/img/TonyP.jpg" alt="" width="384" height="512">
   <div class="pt-6 text-center space-y-4">
     <blockquote>
@@ -26,8 +27,8 @@
     </figcaption>
   </div>
 </figure>
-<!--以下是修方良-->
-<figure class="bg-gray-100 rounded-xl p-8">
+<!--以下是修方良 可用 bg-gray-100來修正-->
+<figure class="bg-white rounded-xl p-8">
   <img class="w-32 h-32 rounded-full mx-auto" src="/img/FrankP.jpg" alt="" width="384" height="512">
   <div class="pt-6 text-center space-y-4">
     <blockquote>
@@ -39,9 +40,8 @@
       </p>
     </blockquote>
     <figcaption class="font-medium">
-      <!--此處須改顏色-->
       <div style="color:#0D8ABB">
-        Frank Hsui
+        Frank Hsiu
       </div>
       <div class="text-gray-500">
         History Expert, FJU
