--- a/layouts/partials/RecentPost.html
+++ b/layouts/partials/RecentPost.html
@@ -1,3 +1,4 @@
+{{ $amount := 3 }}
 <body >
 <main class="container mx-auto mt-8 px-4 xl:px-0">
      <section id="Allarticles" class="mt-12" style="margin: 20px">
@@ -7,7 +8,8 @@
          <div
              class="mt-8 grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
          >
-         {{ range ( first 3 ( .Site.RegularPages ).ByDate.Reverse ) }}
+         {{ range ( first $amount ( .Site.RegularPages ).ByDate.Reverse ) }}
+            {{if eq .Params.hide false }}
             <div class="hover:bg-gray-300 hover:shadow-2xl transition duration-200 w-full rounded overflow-hidden shadow-lg ">
                     <a href="{{.Permalink}}">
                     {{if .Params.image}}
@@ -34,11 +36,13 @@
                      </div>
                      <div style="color:grey; font-size:16px;">{{ dateFormat "Monday, Jan 2, 2006" .Date }}</div>
                       <p class="text-gray-700 text-base">
-                          {{ truncate 100 .Summary}}
+                          {{ truncate 85 .Summary}}
                       </p>
                 </div>
             </div>
-           {{ end }}
+            {{else}}
+            {{ end }}
+         {{ end }}
        </div>
      </section>
   </main>
