--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,6 +12,7 @@
   <!--{{ partial "AllAAA.html" . }}
       {{ partial "BelowTest.html" . }}
       {{ partial "About.html" . }}
+      {{ partial "BelowTest.html" . }}
       {{ partial "TEST.html" . }} -->
       {{ partial "footer.html" . }}
   </body>
