--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/index.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/navbar.css" />
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="img/favicon.ico" />
 <link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet">
 <!--上面那一行只是快速演示Tailwind的功能-->
 <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
