--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -3,7 +3,7 @@
   <main class="container mx-auto mt-8 px-4 xl:px-0">
 
   <br><br><br><br>
-  <div id="about" class="md:flex justify-center">
+  <div id="about" class="md:flex justify-center" style="margin: 20px">
       {{ partial "home_title" (dict "title" "關於我們") }}
   </div>
   <br>
