--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <html>
 <head>
      <meta charset="UTF-8">
-     {{ $gggg := .Title }};
+     {{ $gggg := .Title }}
      <title>夏時紀錄 -{{ $gggg }}</title>
 </head>
     <body>
