--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,7 @@
       {{ partial "hometest.html" . }}
       {{ partial "home.html" . }}
       {{ partial "RecentPost.html" . }}
+      {{ partial "PageWrapper.html" . }}
   <!--{{ partial "AllAAA.html" . }}
       {{ partial "BelowTest.html" . }}
       {{ partial "About.html" . }}
