--- a/layouts/partials/RecentPost.html
+++ b/layouts/partials/RecentPost.html
@@ -1,13 +1,13 @@
 {{ $amount := 3 }}
 <body >
 <main class="container mx-auto mt-8 px-4 xl:px-0">
-     <section id="Allarticles" class="mt-12" style="margin: 20px">
+     <section id="Allarticles" class="mt-12" >
         <div class="md:flex justify-center">
               {{ partial "home_title" (dict "title" "最新文章") }}
         </div>
-         <div
-             class="mt-8 grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
-         >
+        <div
+             class="mt-8 grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4" style="margin: 50px"
+        >
          {{ range ( first $amount ( .Site.RegularPages ).ByDate.Reverse ) }}
             {{if eq .Params.hide false }}
             <div class="hover:bg-gray-300 hover:shadow-2xl transition duration-200 w-full rounded overflow-hidden shadow-lg ">
