--- a/layouts/shortcodes/mimg.html
+++ b/layouts/shortcodes/mimg.html
@@ -1,1 +1,1 @@
-<img src="{{ .Get `src` }}" style="width: {{ .Get `width` }}; height: {{ .Get `height` }};">
+<img src="{{ .Get `src` }}" style="width: {{ .Get `width` }}; height: {{ .Get `height` }}; display:flex">
