--- a/layouts/SpecialLayouts/DMlayout.html
+++ b/layouts/SpecialLayouts/DMlayout.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <a href="#" class="logo">
-            <img src="/img/logo.png" alt="">
+            <img src="/img/KMU.png" alt="">
         </a>
         <nav class="navbar">
             <a href="#home">首頁</a>
@@ -24,7 +24,7 @@
         </nav>
         <div class="icons">
             <div class="fas fa-search" id="search-btn"></div>
-            <div class="fas fa-shopping-cart" id="cart-btn"></div>
+            <div class="fas fa-bell" id="cart-btn"></div>
             <div class="fas fa-bars" id="menu-btn"></div>
         </div>
         <div class="search-form">
@@ -34,45 +34,45 @@
         <div class="cart-items-container">
             <div class="cart-item">
                 <span c;ass="fas fa-times"></span>
-                <img src="/img/cart-item-1.png" alt="">
+                <img src="/img/FF.jpg" alt="">
                 <div class="content">
-                      <h3>cart item 01</h3>
-                      <div class="price">$15.99</div>
+                      <h3>消防署</h3>
+                      <div class="price">高雄市消防局</div>
                 </div>
             </div>
             <div class="cart-item">
                 <span c;ass="fas fa-times"></span>
-                <img src="/img/cart-item-2.png" alt="">
+                <img src="/img/KMU2.jpg" alt="">
                 <div class="content">
-                      <h3>cart item 02</h3>
-                      <div class="price">$15.99</div>
+                      <h3>醫院</h3>
+                      <div class="price">高雄醫學大學附設醫院</div>
                 </div>
             </div>
             <div class="cart-item">
                 <span c;ass="fas fa-times"></span>
-                <img src="/img/cart-item-3.png" alt="">
+                <img src="/img/ET.jpg" alt="">
                 <div class="content">
-                      <h3>cart item 03</h3>
-                      <div class="price">$15.99</div>
+                      <h3>新聞台</h3>
+                      <div class="price">ETtoday. Cdn...</div>
                 </div>
             </div>
             <div class="cart-item">
                 <span c;ass="fas fa-times"></span>
-                <img src="/img/cart-item-4.png" alt="">
+                <img src="/img/ZH.jpg" alt="">
                 <div class="content">
-                      <h3>cart item 04</h3>
-                      <div class="price">$15.99</div>
+                      <h3>慈善團體</h3>
+                      <div class="price">慈濟基金會</div>
                 </div>
             </div>
-            <a href="#" class="btn">checkout now</a>
+            <a href="#" class="btn">接收通知訊息</a>
         </div>
     </header>
-    
+
     <section class="home" id="home">
         <div class="content">
             <h3>城中城災情整合平台</h3>
             <p>受到G0V的啟發, 我們決定做一個資訊整合平台, 提供給災民以及想幫助的人一個簡單明瞭的共同編輯網頁。本網站將使用API串聯以提供第一手資訊</p>
-            <a href="#" class="btn">繼續閱讀</a>
+            <a href="#about" class="btn">繼續閱讀</a>
         </div>
     </section>
 
@@ -96,113 +96,82 @@
         <div class="box-container">
             <div class="box">
                 <img src="/img/menu-1.png" alt="">
-                <h3>tasty and healthy</h3>
-                <div class="price">$15.99 <span>20.99</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <h3>物品遺失清單</h3>
+                <div class="price"><span>現場遺許多物品...</span></div>
+                <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
                 <img src="/img/menu-2.png" alt="">
-                <h3>tasty and healthy</h3>
-                <div class="price">$15.99 <span>20.99</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <h3>緊急聯絡電話一覽</h3>
+                <div class="price"><span>這裡整理了所有緊急聯絡電話與報平安專線</span></div>
+                <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
                 <img src="/img/menu-3.png" alt="">
-                <h3>tasty and healthy</h3>
-                <div class="price">$15.99 <span>20.99</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <h3>免費入住旅館</h3>
+                <div class="price"><span>這裡整理了附近可供暫時使用的免費住所</span></div>
+                <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
                 <img src="/img/menu-4.png" alt="">
-                <h3>tasty and healthy</h3>
-                <div class="price">$15.99 <span>20.99</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <h3>緊急入住名單彙整</h3>
+                <div class="price"><span>家屬可察看名單尋找親人位置</span></div>
+                <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
                 <img src="/img/menu-5.png" alt="">
-                <h3>tasty and healthy</h3>
-                <div class="price">$15.99 <span>20.99</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <h3>傷者就醫保障措施</h3>
+                <div class="price"><span>無法持健保卡的民眾仍可以健保身分就醫</span></div>
+                <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
                 <img src="/img/menu-6.png" alt="">
-                <h3>tasty and healthy</h3>
-                <div class="price">$15.99 <span>20.99</span></div>
-                <a href="#" class="btn">add to cart</a>
+                <h3>傷亡名冊</h3>
+                <div class="price"><span>目前持續更新傷亡名單, 基於個資僅公開部份資訊</span></div>
+                <a href="#" class="btn">前往</a>
             </div>
         </div>
     </section>
 
-    <section class="products" id="products">
+    <section class="menu" id="products">
         <h1 class="heading"> 給 <span>能幫助的人</span> </h1>
         <div class="box-container">
-
             <div class="box">
-                <div class="icons">
-                    <a href="#" class="fas fa-shopping-cart"></a>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>
-                </div>
-                <div class="image">
-                    <img src="/img/product-1.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>fresh coffee</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">$15.99 <span>$20.99</span></div>
-                </div>
+                <img src="/img/menu-1.png" alt="">
+                <h3>物品遺失清單</h3>
+                <div class="price"><span>現場遺許多物品...</span></div>
+                <a href="#" class="btn">前往</a>
             </div>
-
             <div class="box">
-                <div class="icons">
-                    <a href="#" class="fas fa-shopping-cart"></a>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>
-                </div>
-                <div class="image">
-                    <img src="/img/product-2.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>fresh coffee</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">$15.99 <span>$20.99</span></div>
-                </div>
+                <img src="/img/menu-2.png" alt="">
+                <h3>緊急聯絡電話一覽</h3>
+                <div class="price"><span>這裡整理了所有緊急聯絡電話與報平安專線</span></div>
+                <a href="#" class="btn">前往</a>
             </div>
-
             <div class="box">
-                <div class="icons">
-                    <a href="#" class="fas fa-shopping-cart"></a>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>
-                </div>
-                <div class="image">
-                    <img src="/img/product-3.png" alt="">
-                </div>
-                <div class="content">
-                    <h3>fresh coffee</h3>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-                    <div class="price">$15.99 <span>$20.99</span></div>
-                </div>
+                <img src="/img/menu-3.png" alt="">
+                <h3>免費入住旅館</h3>
+                <div class="price"><span>這裡整理了附近可供暫時使用的免費住所</span></div>
+                <a href="#" class="btn">前往</a>
             </div>
-
+            <div class="box">
+                <img src="/img/menu-4.png" alt="">
+                <h3>緊急入住名單彙整</h3>
+                <div class="price"><span>家屬可察看名單尋找親人位置</span></div>
+                <a href="#" class="btn">前往</a>
+            </div>
+            <div class="box">
+                <img src="/img/menu-5.png" alt="">
+                <h3>傷者就醫保障措施</h3>
+                <div class="price"><span>無法持健保卡的民眾仍可以健保身分就醫</span></div>
+                <a href="#" class="btn">前往</a>
+            </div>
+            <div class="box">
+                <img src="/img/menu-6.png" alt="">
+                <h3>傷亡名冊</h3>
+                <div class="price"><span>目前持續更新傷亡名單, 基於個資僅公開部份資訊</span></div>
+                <a href="#" class="btn">前往</a>
+            </div>
         </div>
     </section>
 
@@ -339,17 +308,7 @@
             <a href="#" class="fab fa-pinterest"></a>
         </div>
 
-        <div class="links">
-            <a href="#">home</a>
-            <a href="#">about</a>
-            <a href="#">menu</a>
-            <a href="#">products</a>
-            <a href="#">review</a>
-            <a href="#">contact</a>
-            <a href="#">blogs</a>
-        </div>
-
-        <div class="credit">created by <span>Tony Chen</span> For Disaster Medicine | 2022 all rights reserved</div>
+        <div class="credit">created by <span>You-Ren Chen</span> For Disaster Medicine | 2022 all rights reserved</div>
     </section>
 
     <script src="/js/DM.js"></script>
