--- a/layouts/SpecialLayouts/DMlayout.html
+++ b/layouts/SpecialLayouts/DMlayout.html
@@ -10,7 +10,7 @@
   <body>
 
     <header class="header">
-        <a href="#" class="logo">
+        <a href="https://tonychen91.github.io" class="logo">
             <img src="/img/KMU.png" alt="">
         </a>
         <nav class="navbar">
@@ -95,37 +95,37 @@
         <h1 class="heading"> 給 <span>傷者與家屬</span> </h1>
         <div class="box-container">
             <div class="box">
-                <img src="/img/menu-1.png" alt="">
+                <img src="/img/lost.png" alt="">
                 <h3>物品遺失清單</h3>
                 <div class="price"><span>現場遺許多物品...</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
-                <img src="/img/menu-2.png" alt="">
+                <img src="/img/emercall.png" alt="">
                 <h3>緊急聯絡電話一覽</h3>
                 <div class="price"><span>這裡整理了所有緊急聯絡電話與報平安專線</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
-                <img src="/img/menu-3.png" alt="">
+                <img src="/img/shelter.png" alt="">
                 <h3>免費入住旅館</h3>
                 <div class="price"><span>這裡整理了附近可供暫時使用的免費住所</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
-                <img src="/img/menu-4.png" alt="">
+                <img src="/img/list.png" alt="">
                 <h3>緊急入住名單彙整</h3>
                 <div class="price"><span>家屬可察看名單尋找親人位置</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
-                <img src="/img/menu-5.png" alt="">
+                <img src="/img/law.png" alt="">
                 <h3>傷者就醫保障措施</h3>
                 <div class="price"><span>無法持健保卡的民眾仍可以健保身分就醫</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
-                <img src="/img/menu-6.png" alt="">
+                <img src="/img/band.png" alt="">
                 <h3>傷亡名冊</h3>
                 <div class="price"><span>目前持續更新傷亡名單, 基於個資僅公開部份資訊</span></div>
                 <a href="#" class="btn">前往</a>
@@ -137,39 +137,33 @@
         <h1 class="heading"> 給 <span>能幫助的人</span> </h1>
         <div class="box-container">
             <div class="box">
-                <img src="/img/menu-1.png" alt="">
-                <h3>物品遺失清單</h3>
-                <div class="price"><span>現場遺許多物品...</span></div>
+                <img src="/img/camera.png" alt="">
+                <h3>現場影像事證</h3>
+                <div class="price"><span>提供附近居民收集影像的整合庫</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
-                <img src="/img/menu-2.png" alt="">
-                <h3>緊急聯絡電話一覽</h3>
-                <div class="price"><span>這裡整理了所有緊急聯絡電話與報平安專線</span></div>
+                <img src="/img/bloodd.png" alt="">
+                <h3>全國各捐血點查詢</h3>
+                <div class="price"><span>XXXXXXXX</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
-                <img src="/img/menu-3.png" alt="">
-                <h3>免費入住旅館</h3>
-                <div class="price"><span>這裡整理了附近可供暫時使用的免費住所</span></div>
+                <img src="/img/locate.png" alt="">
+                <h3>捐血車位置圖</h3>
+                <div class="price"><span>XXXX</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
-                <img src="/img/menu-4.png" alt="">
-                <h3>緊急入住名單彙整</h3>
-                <div class="price"><span>家屬可察看名單尋找親人位置</span></div>
+                <img src="/img/donate.png" alt="">
+                <h3>衛福部捐款帳號</h3>
+                <div class="price"><span>XXX</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
-                <img src="/img/menu-5.png" alt="">
-                <h3>傷者就醫保障措施</h3>
-                <div class="price"><span>無法持健保卡的民眾仍可以健保身分就醫</span></div>
-                <a href="#" class="btn">前往</a>
-            </div>
-            <div class="box">
-                <img src="/img/menu-6.png" alt="">
-                <h3>傷亡名冊</h3>
-                <div class="price"><span>目前持續更新傷亡名單, 基於個資僅公開部份資訊</span></div>
+                <img src="/img/volunteer.png" alt="">
+                <h3>志工招募</h3>
+                <div class="price"><span>我們需要志工協助鑑定後的現場復原.以及心理輔導陪伴</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
         </div>
@@ -257,40 +251,38 @@
         <h1 class="heading"> 最新 <span> 資訊</span> </h1>
 
         <div class="box-container">
-
+          <div class="box">
+              <div class="image">
+                  <img src="/img/new2.jpg" alt="">
+              </div>
+              <div class="content">
+                  <a href="https://www.rti.org.tw/news/view/id/2122399" class="title">消防署長：「消防設備人員法」不拖了 新會期可望列優先</a>
+                  <span>中央廣播電台 / 18st Jan, 2022</span>
+                  <p>而去年10月的高雄城中城大火案，不僅造成46人罹難，更燒出建築物消防安檢及設備管理維護問題。 對於外界關注延宕20年的「消防設備人員法」，是否能夠在今年順利三讀？</p>
+                  <a href="https://www.rti.org.tw/news/view/id/2122399" class="btn">read more</a>
+              </div>
+          </div>
             <div class="box">
                 <div class="image">
-                    <img src="/img/blog-1.jpeg" alt="">
+                    <img src="/img/new1.jpg" alt="">
                 </div>
                 <div class="content">
-                    <a href="#" class="title">tasty and refreshing coffee</a>
-                    <span>by admin / 21st may, 2021</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
-                    <a href="#" class="btn">read more</a>
+                    <a href="https://udn.com/news/story/7327/6037522" class="title">城中城建物持續拆除 1月26日評選廠商興建公園</a>
+                    <span>udn 聯合新聞網 / 16st Jan, 2022</span>
+                    <p>高雄城中城大火後，建物被判定危樓拆除，市府仍在拆除作業中。拆除後原址將興建公園，市府預計1月26日進行廠商評選，後續完成...</p>
+                    <a href="https://udn.com/news/story/7327/6037522" class="btn">read more</a>
                 </div>
             </div>
 
             <div class="box">
                 <div class="image">
-                    <img src="/img/blog-2.jpeg" alt="">
+                    <img src="/img/new3.jpg" alt="">
                 </div>
                 <div class="content">
-                    <a href="#" class="title">tasty and refreshing coffee</a>
-                    <span>by admin / 21st may, 2021</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
-                    <a href="#" class="btn">read more</a>
-                </div>
-            </div>
-
-            <div class="box">
-                <div class="image">
-                    <img src="/img/blog-3.jpeg" alt="">
-                </div>
-                <div class="content">
-                    <a href="#" class="title">tasty and refreshing coffee</a>
-                    <span>by admin / 21st may, 2021</span>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dicta.</p>
-                    <a href="#" class="btn">read more</a>
+                    <a href="https://www.upmedia.mg/news_info.php?SerialNo=135201" class="title">城中城大火燒出弱勢悲歌！台灣社福總盟關注社宅租金定價，盼落實居住正義</a>
+                    <span>up media 上報 / 14st Jan, 2022</span>
+                    <p>位在高雄市鹽埕區、屋齡高達40年的「城中城」大樓，在2021年10月發生嚴重火災，造成46人死亡、41人輕重傷。...</p>
+                    <a href="https://www.upmedia.mg/news_info.php?SerialNo=135201" class="btn">read more</a>
                 </div>
             </div>
 
