--- a/layouts/SpecialLayouts/DMlayout.html
+++ b/layouts/SpecialLayouts/DMlayout.html
@@ -145,19 +145,19 @@
             <div class="box">
                 <img src="/img/bloodd.png" alt="">
                 <h3>全國各捐血點查詢</h3>
-                <div class="price"><span>XXXXXXXX</span></div>
+                <div class="price"><span>整理捐血站地點</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
                 <img src="/img/locate.png" alt="">
                 <h3>捐血車位置圖</h3>
-                <div class="price"><span>XXXX</span></div>
+                <div class="price"><span>協助民眾快速找到及時捐血車的位置</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
                 <img src="/img/donate.png" alt="">
                 <h3>衛福部捐款帳號</h3>
-                <div class="price"><span>XXX</span></div>
+                <div class="price"><span>衛服部網站資訊</span></div>
                 <a href="#" class="btn">前往</a>
             </div>
             <div class="box">
@@ -174,41 +174,29 @@
         <div class="box-container">
             <div class="box">
                 <img src="/img/quote-img.png" alt="" class="quote">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-                <img src="/img/pic-1.png" class="user" alt="">
-                <h3>john deo</h3>
+                <p>這次的大火是對日常的消防設備的一次期中考 但這次考驗所付出的代價真的太殘酷了 希望我們能謹記這次的教訓 也希望那些因為這次事件受到傷害的人能早日回歸正常生活 高雄加油 大家加油</p>
+                <img src="/img/r2.jpg" class="user" alt="">
+                <h3>林旻慧</h3>
                 <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
+
                 </div>
             </div>
             <div class="box">
                 <img src="/img/quote-img.png" alt="" class="quote">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-                <img src="/img/pic-2.png" class="user" alt="">
-                <h3>john deo</h3>
+                <p>這次的大火犧牲了許多無辜的性命，除了讓第一線的消防人員疲於奔命，也讓醫護人員承受莫大的壓力。不同於之前的災難，此次城中城大火有許多醫護人員在災後進入現場進行死亡宣告，我想在那種情況下，一定會不經意的設想亡者生前的痛苦，辛苦您們了!</p>
+                <img src="/img/r1.jpg" class="user" alt="">
+                <h3>林俐均</h3>
                 <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
+
                 </div>
             </div>
             <div class="box">
                 <img src="/img/quote-img.png" alt="" class="quote">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nulla sit libero nemo fuga sequi nobis? Necessitatibus aut laborum, nisi quas eaque laudantium consequuntur iste ex aliquam minus vel? Nemo.</p>
-                <img src="/img/pic-3.png" class="user" alt="">
-                <h3>john deo</h3>
+                <p>醫護人員的身心無疑是巨大的折磨，希望他們在事件平息後，不要掉入憂鬱的漩渦，能夠釋懷並且在工作上重新找回自己的價值</p>
+                <img src="/img/r3.jpg" class="user" alt="">
+                <h3>匿名</h3>
                 <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
+
                 </div>
             </div>
         </div>
